モーダルテキストエリア追加

--- a/newdesign.html
+++ b/newdesign.html
@@ -148,11 +148,11 @@
                     <a href=""><span class="link tag-btn">→企画書</span></a>
                   </div>
 
-                  <p class="modalDescription">
+                  <p class="modalDescription1">
                     WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
                   </p>
-                  <span class="scroll">scroll</span>
-                  <p>
+                  <!-- <span class="scroll">scroll</span> -->
+                  <p class="modalDescription2">
                     テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                   </p>
                 </div>
