枠内にコンテンツを収める

--- a/newdesign.html
+++ b/newdesign.html
@@ -96,78 +96,122 @@
       </header>
       <main>
         <!-- 白背景 -->
-        <div class="fixed-box"></div>
-        <!-- /.fixed-box -->
-        <!-- コンテンツ -->
-        <div id="contentsWrap">
-          <!-- WEBサイト -->
-          <section id="website" class="contentsArea">
-            <h2 class="contentsHeading">Web Site</h2>
-            <div class="thumbnailArea">
-              <div class="thumbnailItem border">
-                <button type="button" data-modal="modal1" class="modalOpen">
-                  <img
-                    src="images/websitethumbnail1.png"
-                    alt="WEBサイト「Mew and I」サムネイル"
-                    class="thumbnailImage"
-                  />
-                  <div class="thumbnailText">
-                    <h3 class="thumbnailTitle">
-                      WordPressオリジナルテーマサイト
-                    </h3>
-                    <p class="thumbnailDescripition">
-                      保護猫譲渡をテーマにしたサイト（自主制作・架空サイト）
+        <div class="fixed-box">
+          <!-- /.fixed-box -->
+          <!-- コンテンツ -->
+          <div id="contentsWrap">
+            <!-- WEBサイト -->
+            <section id="website" class="contentsArea">
+              <h2 class="contentsHeading">Web Site</h2>
+              <div class="thumbnailArea">
+                <!-- WEBサイトコンテンツ1 -->
+                <div class="thumbnailItem border">
+                  <button type="button" data-modal="modal1" class="modalOpen">
+                    <img
+                      src="images/websitethumbnail1.png"
+                      alt="WEBサイト「Mew and I」サムネイル"
+                      class="thumbnailImage"
+                    />
+                    <div class="thumbnailText">
+                      <h3 class="thumbnailTitle">
+                        WordPressオリジナルテーマサイト
+                      </h3>
+                      <p class="thumbnailDescripition">
+                        保護猫譲渡をテーマにしたサイト（自主制作・架空サイト）
+                      </p>
+                    </div>
+                    <!--/.thumbnailText-->
+                  </button>
+                </div>
+                <!--/.thumbnailItem-->
+                <!-- WEBサイトコンテンツ2 -->
+                <div class="thumbnailItem border">
+                  <button type="button" data-modal="modal1" class="modalOpen">
+                    <img
+                      src="images/websitethumbnail1.png"
+                      alt="WEBサイト「Mew and I」サムネイル"
+                      class="thumbnailImage"
+                    />
+                    <div class="thumbnailText">
+                      <h3 class="thumbnailTitle">
+                        WordPressオリジナルテーマサイト
+                      </h3>
+                      <p class="thumbnailDescripition">
+                        保護猫譲渡をテーマにしたサイト（自主制作・架空サイト）
+                      </p>
+                    </div>
+                    <!--/.thumbnailText-->
+                  </button>
+                </div>
+                <!--/.thumbnailItem-->
+                <!-- WEBサイトコンテンツ3 -->
+                <div class="thumbnailItem border">
+                  <button type="button" data-modal="modal1" class="modalOpen">
+                    <img
+                      src="images/websitethumbnail1.png"
+                      alt="WEBサイト「Mew and I」サムネイル"
+                      class="thumbnailImage"
+                    />
+                    <div class="thumbnailText">
+                      <h3 class="thumbnailTitle">
+                        WordPressオリジナルテーマサイト
+                      </h3>
+                      <p class="thumbnailDescripition">
+                        保護猫譲渡をテーマにしたサイト（自主制作・架空サイト）
+                      </p>
+                    </div>
+                    <!--/.thumbnailText-->
+                  </button>
+                </div>
+                <!--/.thumbnailItem-->
+              </div>
+              <!--/.thumbnailArea-->
+              <!-- モーダル1 -->
+              <div id="modal1" class="modal">
+                <div class="modalBox">
+                  <span class="closeBtn" data-close>&times;</span>
+                  <div class="modalContent border">
+                    <h3 class="modalHeading">「Mew & I」</h3>
+                    <img
+                      src="images/websitethumbnail1.png"
+                      alt="WEBサイト「Mew and I」サムネイル"
+                      class="modalImage thumbnailImage"
+                    />
+
+                    <div class="modalTagArea border">
+                      <p class="tag tag-btn">自主制作</p>
+                      <p class="tag tag-btn">PHP</p>
+                      <p class="tag tag-btn">JS</p>
+                    </div>
+                    <div class="modalLinkArea border">
+                      <a href=""
+                        ><span class="link tag-btn">→Demoサイト</span></a
+                      >
+                      <a href=""><span class="link tag-btn">→Git</span></a>
+                      <a href=""><span class="link tag-btn">→企画書</span></a>
+                    </div>
+
+                    <p class="modalDescription1">
+                      WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
+                    </p>
+                    <!-- <span class="scroll">scroll</span> -->
+                    <p class="modalDescription2">
+                      テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                     </p>
                   </div>
-                  <!--/.thumbnailText-->
-                </button>
-              </div>
-              <!--/.thumbnailItem-->
-            </div>
-            <!--/.thumbnailArea-->
-            <!-- モーダル1 -->
-            <div id="modal1" class="modal">
-              <div class="modalBox">
-                <span class="closeBtn" data-close>&times;</span>
-                <div class="modalContent border">
-                  <h3 class="modalHeading">「Mew & I」</h3>
-                  <img
-                    src="images/websitethumbnail1.png"
-                    alt="WEBサイト「Mew and I」サムネイル"
-                    class="modalImage thumbnailImage"
-                  />
-
-                  <div class="modalTagArea border">
-                    <p class="tag tag-btn">自主制作</p>
-                    <p class="tag tag-btn">PHP</p>
-                    <p class="tag tag-btn">JS</p>
-                  </div>
-                  <div class="modalLinkArea border">
-                    <a href=""><span class="link tag-btn">→Demoサイト</span></a>
-                    <a href=""><span class="link tag-btn">→Git</span></a>
-                    <a href=""><span class="link tag-btn">→企画書</span></a>
-                  </div>
-
-                  <p class="modalDescription1">
-                    WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
-                  </p>
-                  <!-- <span class="scroll">scroll</span> -->
-                  <p class="modalDescription2">
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                  </p>
+                  <!--/.modalContent-->
                 </div>
-                <!--/.modalContent-->
+                <!-- /.modalBox -->
               </div>
-              <!-- /.modalBox -->
-            </div>
-            <!-- /.modal -->
-          </section>
-          <!--/#website-->
+              <!-- /.modal -->
+            </section>
+            <!--/#website-->
 
-          <!-- デザイン -->
-          <!--/#design-->
+            <!-- デザイン -->
+            <!--/#design-->
+          </div>
+          <!--/#contentsWrap-->
         </div>
-        <!--/#contentsWrap-->
       </main>
       <footer>
         <p id="pageTop">
