枠内にコンテンツを収める完了

--- a/newdesign.html
+++ b/newdesign.html
@@ -55,28 +55,6 @@
   <body id="top" class="background">
     <div id="wrap">
       <header>
-        <!-- ロゴ -->
-        <div class="logoArea">
-          <svg
-            class="handDeco"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="20 20 300 200"
-          >
-            <image href="images\handleft.svg" />
-          </svg>
-          <h1 class="ballet-heading">
-            Murai Mayu's<span class="heading-bigger">Portfolio</span>
-          </h1>
-          <svg
-            class="handDeco"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="-170 20 300 300"
-          >
-            <image href="images\handright.svg" />
-          </svg>
-        </div>
-        <!-- /.logoArea -->
-        <!-- メニュー -->
         <aside id="menu">
           <input type="checkbox" id="drawer-checkbox" />
           <label id="drawer-icon" for="drawer-checkbox">
@@ -92,14 +70,33 @@
             </ul>
           </nav>
         </aside>
-        <!-- /#menu -->
       </header>
       <main>
         <!-- 白背景 -->
-        <div class="fixed-box">
-          <!-- /.fixed-box -->
+        <div class="fixedBox">
           <!-- コンテンツ -->
           <div id="contentsWrap">
+            <!-- ロゴ -->
+            <div class="logoArea">
+              <svg
+                class="handDeco"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="40 20 300 200"
+              >
+                <image href="images\handleft.svg" />
+              </svg>
+              <h1 class="ballet-heading">
+                Murai Mayu's<span class="heading-bigger">Portfolio</span>
+              </h1>
+              <svg
+                class="handDeco"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="-170 20 300 300"
+              >
+                <image href="images\handright.svg" />
+              </svg>
+            </div>
+            <!-- /.logoArea -->
             <!-- WEBサイト -->
             <section id="website" class="contentsArea">
               <h2 class="contentsHeading">Web Site</h2>
@@ -204,14 +201,92 @@
                 <!-- /.modalBox -->
               </div>
               <!-- /.modal -->
+              <!-- モーダル2 -->
+              <div id="modal1" class="modal">
+                <div class="modalBox">
+                  <span class="closeBtn" data-close>&times;</span>
+                  <div class="modalContent border">
+                    <h3 class="modalHeading">「Mew & I」</h3>
+                    <img
+                      src="images/websitethumbnail1.png"
+                      alt="WEBサイト「Mew and I」サムネイル"
+                      class="modalImage thumbnailImage"
+                    />
+
+                    <div class="modalTagArea border">
+                      <p class="tag tag-btn">自主制作</p>
+                      <p class="tag tag-btn">PHP</p>
+                      <p class="tag tag-btn">JS</p>
+                    </div>
+                    <div class="modalLinkArea border">
+                      <a href=""
+                        ><span class="link tag-btn">→Demoサイト</span></a
+                      >
+                      <a href=""><span class="link tag-btn">→Git</span></a>
+                      <a href=""><span class="link tag-btn">→企画書</span></a>
+                    </div>
+
+                    <p class="modalDescription1">
+                      WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
+                    </p>
+                    <!-- <span class="scroll">scroll</span> -->
+                    <p class="modalDescription2">
+                      テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    </p>
+                  </div>
+                  <!--/.modalContent-->
+                </div>
+                <!-- /.modalBox -->
+              </div>
+              <!-- /.modal -->
+              <!-- モーダル3 -->
+              <div id="modal1" class="modal">
+                <div class="modalBox">
+                  <span class="closeBtn" data-close>&times;</span>
+                  <div class="modalContent border">
+                    <h3 class="modalHeading">「Mew & I」</h3>
+                    <img
+                      src="images/websitethumbnail1.png"
+                      alt="WEBサイト「Mew and I」サムネイル"
+                      class="modalImage thumbnailImage"
+                    />
+
+                    <div class="modalTagArea border">
+                      <p class="tag tag-btn">自主制作</p>
+                      <p class="tag tag-btn">PHP</p>
+                      <p class="tag tag-btn">JS</p>
+                    </div>
+                    <div class="modalLinkArea border">
+                      <a href=""
+                        ><span class="link tag-btn">→Demoサイト</span></a
+                      >
+                      <a href=""><span class="link tag-btn">→Git</span></a>
+                      <a href=""><span class="link tag-btn">→企画書</span></a>
+                    </div>
+
+                    <p class="modalDescription1">
+                      WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
+                    </p>
+                    <!-- <span class="scroll">scroll</span> -->
+                    <p class="modalDescription2">
+                      テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    </p>
+                  </div>
+                  <!--/.modalContent-->
+                </div>
+                <!-- /.modalBox -->
+              </div>
+              <!-- /.modal -->
             </section>
             <!--/#website-->
 
             <!-- デザイン -->
+
             <!--/#design-->
           </div>
           <!--/#contentsWrap-->
         </div>
+        <!--/.fixedBox-->
       </main>
       <footer>
         <p id="pageTop">
