コンテンツテキスト編集

--- a/newdesign.html
+++ b/newdesign.html
@@ -123,18 +123,16 @@
                 <!--/.thumbnailItem-->
                 <!-- WEBサイトコンテンツ2 -->
                 <div class="thumbnailItem border">
-                  <button type="button" data-modal="modal1" class="modalOpen">
+                  <button type="button" data-modal="modal2" class="modalOpen">
                     <img
                       src="images/websitethumbnail2.png"
-                      alt="WEBサイト「Mew and I」サムネイル"
+                      alt="カフェサイトサムネイル"
                       class="thumbnailImage"
                     />
                     <div class="thumbnailText">
-                      <h3 class="thumbnailTitle">
-                        WordPressオリジナルテーマサイト
-                      </h3>
+                      <h3 class="thumbnailTitle">カフェサイトのサイト模写</h3>
                       <p class="thumbnailDescripition">
-                        保護猫譲渡をテーマにしたサイト（自主制作・架空サイト）
+                        カフェサイトのトップページの模写
                       </p>
                     </div>
                     <!--/.thumbnailText-->
@@ -143,18 +141,16 @@
                 <!--/.thumbnailItem-->
                 <!-- WEBサイトコンテンツ3 -->
                 <div class="thumbnailItem border">
-                  <button type="button" data-modal="modal1" class="modalOpen">
+                  <button type="button" data-modal="modal3" class="modalOpen">
                     <img
                       src="images/websitethumbnail3.png"
-                      alt="WEBサイト「Mew and I」サムネイル"
+                      alt="ポートフォリオサイトサムネイル"
                       class="thumbnailImage"
                     />
                     <div class="thumbnailText">
-                      <h3 class="thumbnailTitle">
-                        WordPressオリジナルテーマサイト
-                      </h3>
+                      <h3 class="thumbnailTitle">ポートフォリオサイト</h3>
                       <p class="thumbnailDescripition">
-                        保護猫譲渡をテーマにしたサイト（自主制作・架空サイト）
+                        成果物をまとめたサイト（自主制作）
                       </p>
                     </div>
                     <!--/.thumbnailText-->
@@ -202,32 +198,31 @@
               </div>
               <!-- /.modal -->
               <!-- モーダル2 -->
-              <div id="modal1" class="modal">
+              <div id="modal2" class="modal">
                 <div class="modalBox">
                   <span class="closeBtn" data-close>&times;</span>
                   <div class="modalContent border">
-                    <h3 class="modalHeading">「Mew & I」</h3>
+                    <h3 class="modalHeading">カフェサイト</h3>
                     <img
                       src="images/websitethumbnail2.png"
-                      alt="WEBサイト「Mew and I」サムネイル"
+                      alt="カフェサイトサムネイル"
                       class="modalImage thumbnailImage"
                     />
 
                     <div class="modalTagArea border">
-                      <p class="tag tag-btn">自主制作</p>
-                      <p class="tag tag-btn">PHP</p>
+                      <p class="tag tag-btn">サイト模写</p>
                       <p class="tag tag-btn">JS</p>
+                      <p class="tag tag-btn">Slick.js</p>
                     </div>
                     <div class="modalLinkArea border">
                       <a href=""
                         ><span class="link tag-btn">→Demoサイト</span></a
                       >
                       <a href=""><span class="link tag-btn">→Git</span></a>
-                      <a href=""><span class="link tag-btn">→企画書</span></a>
                     </div>
 
                     <p class="modalDescription1">
-                      WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
+                      既存サイトのトップページを模写し、デザインをコードで再現しました。レスポンシブにも対応しています。
                     </p>
                     <!-- <span class="scroll">scroll</span> -->
                     <p class="modalDescription2">
@@ -240,11 +235,11 @@
               </div>
               <!-- /.modal -->
               <!-- モーダル3 -->
-              <div id="modal1" class="modal">
+              <div id="modal3" class="modal">
                 <div class="modalBox">
                   <span class="closeBtn" data-close>&times;</span>
                   <div class="modalContent border">
-                    <h3 class="modalHeading">「Mew & I」</h3>
+                    <h3 class="modalHeading">ポートフォリオサイト</h3>
                     <img
                       src="images/websitethumbnail3.png"
                       alt="WEBサイト「Mew and I」サムネイル"
@@ -253,7 +248,6 @@
 
                     <div class="modalTagArea border">
                       <p class="tag tag-btn">自主制作</p>
-                      <p class="tag tag-btn">PHP</p>
                       <p class="tag tag-btn">JS</p>
                     </div>
                     <div class="modalLinkArea border">
@@ -261,11 +255,10 @@
                         ><span class="link tag-btn">→Demoサイト</span></a
                       >
                       <a href=""><span class="link tag-btn">→Git</span></a>
-                      <a href=""><span class="link tag-btn">→企画書</span></a>
                     </div>
 
                     <p class="modalDescription1">
-                      WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
+                      自身の成果物を見やすくまとめました。
                     </p>
                     <!-- <span class="scroll">scroll</span> -->
                     <p class="modalDescription2">
