--- a/newdesign.html
+++ b/newdesign.html
@@ -177,7 +177,7 @@
                       <p class="tag tag-btn">JS</p>
                     </div>
                     <div class="modalLinkArea border">
-                      <a href=""
+                      <a href="https://mmewandii.stars.ne.jp/wp/"
                         ><span class="link tag-btn">→Demoサイト</span></a
                       >
                       <a href=""><span class="link tag-btn">→Git</span></a>
