Add portfoliosite content

--- a/newdesign.html
+++ b/newdesign.html
@@ -17,13 +17,6 @@
     <link href="css/style-newdesign.css" rel="stylesheet" />
     <link href="css/background.css" rel="stylesheet" />
 
-    <!-- Slick CSS -->
-    <!-- <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-    /> -->
-
     <link
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
       rel="stylesheet"
@@ -40,13 +33,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- <script src="js/gitem-animation.js"></script> -->
-
-    <!-- Slick JS -->
-    <!-- <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script> -->
 
     <!-- Tailwind JS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -55,21 +41,19 @@
   <body id="top" class="background">
     <div id="wrap">
       <header>
-        <aside id="menu">
-          <input type="checkbox" id="drawer-checkbox" />
-          <label id="drawer-icon" for="drawer-checkbox">
-            <span class="menuBtn tag-btn">menu</span>
-          </label>
-          <label id="drawer-close" for="drawer-checkbox"></label>
-          <nav id="gNavi">
-            <ul class="gNaviList">
-              <li class="gNaviItem"><a href="index.html">Top</a></li>
-              <li class="gNaviItem"><a href="#website">Web Site</a></li>
-              <li class="gNaviItem"><a href="#design">Design</a></li>
-              <li class="gNaviItem"><a href="#aboutme">About Me</a></li>
-            </ul>
-          </nav>
-        </aside>
+        <input type="checkbox" id="drawerCheckbox" />
+        <label id="drawerIcon" for="drawerCheckbox" aria-label="Open menu">
+          <span class="menuBtn tagBtn">menu</span>
+        </label>
+        <label id="drawerClose" for="drawerCheckbox"></label>
+        <nav id="gNavi" role="navigation">
+          <ul class="gNaviList">
+            <li class="gNaviItem"><a href="index.html">Top</a></li>
+            <li class="gNaviItem"><a href="#website">Web Site</a></li>
+            <li class="gNaviItem"><a href="#design">Design</a></li>
+            <li class="gNaviItem"><a href="#aboutme">About Me</a></li>
+          </ul>
+        </nav>
       </header>
       <main>
         <!-- 白背景 -->
@@ -172,16 +156,16 @@
                     />
 
                     <div class="modalTagArea border">
-                      <p class="tag tag-btn">自主制作</p>
-                      <p class="tag tag-btn">PHP</p>
-                      <p class="tag tag-btn">JS</p>
+                      <p class="tag tagBtn">自主制作</p>
+                      <p class="tag tagBtn">PHP</p>
+                      <p class="tag tagBtn">JS</p>
                     </div>
                     <div class="modalLinkArea border">
                       <a href="https://mmewandii.stars.ne.jp/wp/"
-                        ><span class="link tag-btn">→Demoサイト</span></a
+                        ><span class="link tagBtn">→Demoサイト</span></a
                       >
-                      <a href=""><span class="link tag-btn">→Git</span></a>
-                      <a href=""><span class="link tag-btn">→企画書</span></a>
+                      <a href=""><span class="link tagBtn">→Git</span></a>
+                      <a href=""><span class="link tagBtn">→企画書</span></a>
                     </div>
 
                     <p class="modalDescription1">
@@ -210,15 +194,15 @@
                     />
 
                     <div class="modalTagArea border">
-                      <p class="tag tag-btn">サイト模写</p>
-                      <p class="tag tag-btn">JS</p>
-                      <p class="tag tag-btn">Slick.js</p>
+                      <p class="tag tagBtn">サイト模写</p>
+                      <p class="tag tagBtn">JS</p>
+                      <p class="tag tagBtn">Slick.js</p>
                     </div>
                     <div class="modalLinkArea border">
                       <a href=""
-                        ><span class="link tag-btn">→Demoサイト</span></a
+                        ><span class="link tagBtn">→Demoサイト</span></a
                       >
-                      <a href=""><span class="link tag-btn">→Git</span></a>
+                      <a href=""><span class="link tagBtn">→Git</span></a>
                     </div>
 
                     <p class="modalDescription1">
@@ -247,14 +231,14 @@
                     />
 
                     <div class="modalTagArea border">
-                      <p class="tag tag-btn">自主制作</p>
-                      <p class="tag tag-btn">JS</p>
+                      <p class="tag tagBtn">自主制作</p>
+                      <p class="tag tagBtn">JS</p>
                     </div>
                     <div class="modalLinkArea border">
                       <a href=""
-                        ><span class="link tag-btn">→Demoサイト</span></a
+                        ><span class="link tagBtn">→Demoサイト</span></a
                       >
-                      <a href=""><span class="link tag-btn">→Git</span></a>
+                      <a href=""><span class="link tagBtn">→Git</span></a>
                     </div>
 
                     <p class="modalDescription1">
