--- a/newdesign.html
+++ b/newdesign.html
@@ -48,7 +48,7 @@
         <label id="drawerClose" for="drawerCheckbox"></label>
         <nav id="gNavi" role="navigation">
           <ul class="gNaviList">
-            <li class="gNaviItem"><a href="index.html">Top</a></li>
+            <li class="gNaviItem"><a href="#top">Top</a></li>
             <li class="gNaviItem"><a href="#website">Web Site</a></li>
             <li class="gNaviItem"><a href="#design">Design</a></li>
             <li class="gNaviItem"><a href="#aboutme">About Me</a></li>
