--- a/newdesign.html
+++ b/newdesign.html
@@ -31,11 +31,14 @@
       rel="stylesheet"
     />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <script src="js/script.js"></script>
 
     <!-- Tailwind JS -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- GSAPライブラリ読み込み -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   </head>
 
   <body id="top" class="background">
@@ -67,7 +70,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="40 20 300 200"
               >
-                <image href="images\handleft.svg" />
+                <image href="images/handleft.svg" x="0" y="0" />
               </svg>
               <h1 class="ballet-heading">
                 Murai Mayu's<span class="heading-bigger">Portfolio</span>
@@ -77,7 +80,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="-170 20 300 300"
               >
-                <image href="images\handright.svg" />
+                <image href="images/handright.svg" x="0" y="0" />
               </svg>
             </div>
             <!-- /.logoArea -->
@@ -273,6 +276,22 @@
       </footer>
     </div>
     <!--/#wrap-->
+
+    <!-- ロゴアニメーション -->
+    <script>
+      const images = document.querySelectorAll('.handDeco image');
+
+      images.forEach((img) => {
+        gsap.to(img, {
+          duration: 5,
+          rotate: 5, // 5度傾ける
+          transformOrigin: '50% 50%', // 回転の軸を中央に
+          repeat: -1,
+          yoyo: true,
+          ease: 'sine.inOut',
+        });
+      });
+    </script>
 
     <!-- モーダル -->
     <script>
