モーダル1テキスト・ｃｓｓ修正

--- a/newdesign.html
+++ b/newdesign.html
@@ -32,12 +32,12 @@
     />
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
 
     <!-- Tailwind JS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- GSAPライブラリ読み込み -->
+    <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   </head>
 
@@ -151,7 +151,7 @@
                 <div class="modalBox">
                   <span class="closeBtn" data-close>&times;</span>
                   <div class="modalContent border">
-                    <h3 class="modalHeading">「Mew & I」</h3>
+                    <h3 class="modalHeading">WordPressサイト「Mew & I」</h3>
                     <img
                       src="images/websitethumbnail1.png"
                       alt="WEBサイト「Mew and I」サムネイル"
@@ -160,6 +160,8 @@
 
                     <div class="modalTagArea border">
                       <p class="tag tagBtn">自主制作</p>
+                      <p class="tag tagBtn">HTML</p>
+                      <p class="tag tagBtn">CSS</p>
                       <p class="tag tagBtn">PHP</p>
                       <p class="tag tagBtn">JS</p>
                     </div>
@@ -171,12 +173,32 @@
                       <a href=""><span class="link tagBtn">→企画書</span></a>
                     </div>
 
-                    <p class="modalDescription1">
-                      WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
+                    <p class="modalOverview">
+                      WordPressでオリジナルテーマを作成し、保護猫譲渡サイトを制作しました。レスポンシブデザインに対応しています。
                     </p>
-                    <!-- <span class="scroll">scroll</span> -->
-                    <p class="modalDescription2">
-                      テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                    <span class="scroll">scroll</span>
+                    <h4 class="modalDescriptionHeading">・2種類の投稿方法</h4>
+                    <p class="modalDescription">
+                      一般投稿でお知らせ関係の投稿ができるようにしています。
+                      カスタム投稿では保護猫の情報がわかりやすく記載できるよう、
+                      また情報ごとに記事をまとめられるように、タクソノミーを設定しています。
+                    </p>
+                    <h4 class="modalDescriptionHeading">
+                      ・お問い合わせフォームの設置
+                    </h4>
+                    <p class="modalDescription">
+                      プラグイン「Contact Form 7」を使用し、実際に使用可能な
+                      お問い合わせフォームを設置しています。
+                    </p>
+                    <h4 class="modalDescriptionHeading">
+                      ・サイト/ロゴデザイン
+                    </h4>
+                    <p class="modalDescription">
+                      「保護猫との暮らしを身近に」がコンセプトです。
+                      保護猫を家に迎えるイメージができるよう、
+                      温かい室内のイメージをカラーコンセプトにしました。
+                      ロゴデザインも、家の中に猫と人が暮らしている様子を
+                      表しました。
                     </p>
                   </div>
                   <!--/.modalContent-->
